Fix overflow when the width of the window is small

--- a/css/components/article-images.css
+++ b/css/components/article-images.css
@@ -1,5 +1,6 @@
 .article_images {
   display: flex;
+  flex-wrap: wrap;
 }
 .article_images__child {
   position: relative;
