--- a/css/components/article-paragraph.css
+++ b/css/components/article-paragraph.css
@@ -1,5 +1,5 @@
 .article_paragraph__text {
-  width: 640px;
+  max-width: 640px;
 
   font-family: var(--body-font);
   font-style: normal;
