--- a/css/components/list_items.css
+++ b/css/components/list_items.css
@@ -1,6 +1,7 @@
 .listitems {
   display: flex;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 .listitems__item {
